--- a/61+/opt/kernel/make.env
+++ b/61+/opt/kernel/make.env
@@ -5,7 +5,7 @@
 if [ -f "${PWD}/whoami" ];then
     source ${PWD}/whoami
 else
-    WHOAMI="JCNF"
+    WHOAMI="wangxiaofeng"
 fi
 
 OPENWRT_VER="R21.6.22"
