--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -107,7 +107,7 @@ jobs:
         allowUpdates: true
         tag: ${{ env.version }}
         commit: main
-        token: ${{ secrets.RELEASES_TOKEN }}
+        token: ${{ secrets.TOKEN }}
         body: |
           ## 以下为N1的最新固件（每日上午8时自动编译打包最新固件）
           默认IP：192.168.1.1 默认密码： password
