--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -111,6 +111,7 @@ jobs:
         body: |
           ## 以下为N1的最新固件（每日上午8时自动编译打包最新固件）
           默认IP：192.168.1.1 默认密码： password
+          无线名称：Phicomm_n1 无线密码：password
           Openwr (注:此版本为王晓峰个人的精简版。+o版内核更稳定)
         artifacts: "/opt/kernel/tmp/*"   
 
