--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -118,7 +118,7 @@ jobs:
           [推荐vps服务器②-CMI](https://wxf2088.xyz/2905.html)
           [推荐vps服务器③-美西](https://wxf2088.xyz/1923.html)
           [高配便宜vps-普通线路](https://wxf2088.xyz/1521.html)
-          [精品线路机场](https://wxf2088.xyz/3021.html)
+          [精品线路机场](https://tianquege.top/#/register?code=Ybv8Nuvs)
         artifacts: "/opt/kernel/tmp/*"   
 
     - name: Upload firmware to WeTransfer
