--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -117,7 +117,7 @@ jobs:
           [推荐vps服务器①-CN2GIA](https://wxf2088.xyz/2499.html)
           [推荐vps服务器②-CMI](https://wxf2088.xyz/2905.html)
           [推荐vps服务器③-美西](https://wxf2088.xyz/1923.html)
-          [高配便宜vps-普通线路](https://wxf2088.xyz/1521.html)
+          [高配便宜vps-普通线路](https://tianquege.top/#/register?code=Ybv8Nuvs)
           [精品线路机场](https://tianquege.top/#/register?code=Ybv8Nuvs)
         artifacts: "/opt/kernel/tmp/*"   
 
